@@ -87,7 +87,7 @@ href="uptodate.html">Uptodate</a> task, all attributes and nested
 elements of that task are supported, the property and value attributes
 are redundant and will be ignored.</p>
 
-<h4>os</h4>
+<a name="os"><h4>os</h4></a>
 <p>Test whether the current operating system is of a given type.  Each
 defined attribute is tested and the result is true only if <i>all</i>
 the tests succeed.
